--- a/hyper.html
+++ b/hyper.html
@@ -21,6 +21,23 @@
         <section class="section sec4"></section>
         <section class="section sec5"></section>
     </main>
-    
+    <div class="controls">
+        <div class="control control_1 btn_active">
+            <i class="fas fa-home"></i>
+        </div>
+        <div class="control control_2">
+            <i class="fas fa-user"></i>
+        </div>
+        <div class="control control_3">
+            <i class="fas fa-briefcase"></i>
+        </div>
+        <div class="control control_4">
+            <i class="fas fa-newspaper"></i>
+        </div>
+        <div class="control control_5">
+            <i class="fas fa-envelope-open"></i>
+        </div>
+    </div>
 </body>
+<script src="app.js"></script>
 </html>
