--- a/hyper.html
+++ b/hyper.html
@@ -13,7 +13,7 @@
 </head>
 <body class="main_content">
     <header class="section sec1 active" id="home">
-         <i class="fab fa-instagram"></i>
+         lorem
     </header>
     <main>
         <section class="section sec2" id="about"></section>
