--- a/hyper.html
+++ b/hyper.html
@@ -23,23 +23,23 @@
     </main>
     <div class="controls">
         <div class="control control_1 btn_active" data-id="home">
-            <i class="fas fa-home"></i>
+            <i class="fas fa-home iconka"></i>
         </div>
         <div class="control control_2" data-id="about">
-            <i class="fas fa-user"></i>
+            <i class="fas fa-user iconka"></i>
         </div>
         <div class="control control_3" data-id="portfolio">
-            <i class="fas fa-briefcase"></i>
+            <i class="fas fa-briefcase iconka"></i>
         </div>
         <div class="control control_4" data-id="blogs">
-            <i class="fas fa-newspaper"></i>
+            <i class="fas fa-newspaper iconka"></i>
         </div>
         <div class="control control_5" data-id="contact">
-            <i class="fas fa-envelope-open"></i>
+            <i class="fas fa-envelope-open iconka"></i>
         </div>
     </div>
 
 
-    <script src="app.js"></script>
+    <script src="try.js"></script>
 </body>
 </html>
