--- a/hyper.html
+++ b/hyper.html
@@ -5,15 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,400&display=swap" rel="stylesheet">  
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio</title>
 </head>
+
 <body class="main_content">
     <header class="section sec1 active" id="home">
-         lorem
+        <div class="header_content">
+            <div class="left_header">
+                <div class="back_shape"></div>
+                <div class="image">
+                    <img src="./images/nature.jpg" alt="">
+                </div>
+            </div>
+            <div class="right_header">
+                <h1 class="name">Hello. I am <span> Muhammad Jafar</span>. An influencer</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae, officiis?</p>
+                <a href="#" class="download_btn">
+                    <span class="download_text">Download CV</span>
+                    <span class="download_icon"><i class="fas fa-download"></i></span>
+                </a>
+            </div>
+        </div>
     </header>
     <main>
         <section class="section sec2" id="about"></section>
@@ -23,19 +41,19 @@
     </main>
     <div class="controls">
         <div class="control control_1 btn_active" data-id="home">
-            <i class="fas fa-home iconka"></i>
+            <i class="fas fa-home "></i>
         </div>
         <div class="control control_2" data-id="about">
-            <i class="fas fa-user iconka"></i>
+            <i class="fas fa-user "></i>
         </div>
         <div class="control control_3" data-id="portfolio">
-            <i class="fas fa-briefcase iconka"></i>
+            <i class="fas fa-briefcase "></i>
         </div>
         <div class="control control_4" data-id="blogs">
-            <i class="fas fa-newspaper iconka"></i>
+            <i class="fas fa-newspaper "></i>
         </div>
         <div class="control control_5" data-id="contact">
-            <i class="fas fa-envelope-open iconka"></i>
+            <i class="fas fa-envelope-open "></i>
         </div>
     </div>
 
