--- a/hyper.html
+++ b/hyper.html
@@ -25,11 +25,13 @@
             </div>
             <div class="right_header">
                 <h1 class="name">Hello. I am <span> Muhammad Jafar</span>. An influencer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae, officiis?</p>
-                <a href="#" class="download_btn">
-                    <span class="download_text">Download CV</span>
-                    <span class="download_icon"><i class="fas fa-download"></i></span>
-                </a>
+                <p>Who am I? This question always makes me ponder. I am a son, brother, friend, initially a student of life, sometimes passed, sometimes failed its exams. </p>
+                <div class="btn_container">
+                    <a href="#" class="download_btn">
+                        <span class="download_text">Download CV</span>
+                        <span class="download_icon"><i class="fas fa-download"></i></span>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
