--- a/hyper.html
+++ b/hyper.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="main_content">
-    <header class="section sec1 active" id="home">
+    <header class="section sec1 " id="home">
         <div class="header_content">
             <div class="left_header">
                 <div class="back_shape"></div>
@@ -36,7 +36,51 @@
         </div>
     </header>
     <main>
-        <section class="section sec2" id="about"></section>
+        <section class="section sec2 active" id="about">
+            <div class="main_title">
+                <h2>About <span >me</span><span class="bg_text">my stats</span></h2>
+            </div>
+            <div class="about_container">
+                <div class="left_about">
+                    <h2>Here is some information about me</h2>
+                    <p>I am Muhammad Jafar and I was born in 2004 in Tashkent.
+                         Graduated Westminster lyceum in 2021, currently I am between jobs.
+                    </p>
+                    <div class="btn_container">
+                        <a href="#" class="download_btn">
+                            <span class="download_text">Download CV</span>
+                            <span class="download_icon"><i class="fas fa-download"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="right_about">
+                    <div class="right_about_item">
+                        <div class="about_text">
+                            <p class="large_text">7+</p>
+                            <p class="small_text">Projects <br> completed</p>
+                        </div>
+                    </div>
+                    <div class="right_about_item">
+                        <div class="about_text">
+                            <p class="large_text">1+</p>
+                            <p class="small_text">Years of <br> experience</p>
+                        </div>
+                    </div>
+                    <div class="right_about_item">
+                        <div class="about_text">
+                            <p class="large_text">11+</p>
+                            <p class="small_text">Helpful <br> collegues</p>
+                        </div>
+                    </div>
+                    <div class="right_about_item">
+                        <div class="about_text">
+                            <p class="large_text">5+</p>
+                            <p class="small_text">Senior <br> teachers</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec3" id="portfolio"></section>
         <section class="section sec4" id="blogs"></section>
         <section class="section sec5" id="contact"></section>
