--- a/hyper.html
+++ b/hyper.html
@@ -80,6 +80,103 @@
                     </div>
                 </div>
             </div>
+            <div class="about_stats">
+                <h2 class="my_skills">My skills</h2>
+                <div class="progress_bars">
+                    <div class="progress_bar">
+                        <p class="progress_title">HTML</p>
+                        <div class="progress_container">
+                            <p class="progress_text">90%</p>
+                            <div class="progress_itself">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress_bar">
+                        <p class="progress_title">CSS</p>
+                        <div class="progress_container">
+                            <p class="progress_text">85%</p>
+                            <div class="progress_itself">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress_bar">
+                        <p class="progress_title">Javascript</p>
+                        <div class="progress_container">
+                            <p class="progress_text">75%</p>
+                            <div class="progress_itself">
+                                <span class="js"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress_bar">
+                        <p class="progress_title">Bootstrap</p>
+                        <div class="progress_container">
+                            <p class="progress_text">75%</p>
+                            <div class="progress_itself">
+                                <span class="boots"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress_bar">
+                        <p class="progress_title">React Js</p>
+                        <div class="progress_container">
+                            <p class="progress_text">70%</p>
+                            <div class="progress_itself">
+                                <span class="react"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="timeline">
+                <h2 class="my_skills">my timeline</h2>
+                <div class="timeline_container">
+                    <div class="timeline_item">
+                        <div class="timeline_icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="timeline_duration">
+                            09/2019-05/2021
+                        </p>
+                        <h5>student <span> - Westminster lyceum student</span></h5>
+                        <p>It was the first and prpbably the biggest turn in my life till now,
+                            many life-long lessons friends and helpful teachers amazing moments</p>
+                    </div>
+                    <div class="timeline_item">
+                        <div class="timeline_icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="timeline_duration">
+                            06/2021-10/2021
+                        </p>
+                        <h5>Frontend developer <span> - Smart Soft development</span></h5>
+                        <p>First time when I saw real working environment among professionals, rewrite long-lines of codes, learning and learning </p>
+                    </div>
+                    <div class="timeline_item">
+                        <div class="timeline_icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="timeline_duration">
+                            11/2021-01/2022
+                        </p>
+                        <h5>Undergraduate <span> - Application time</span></h5>
+                        <p>This period came to me quite stressful; 2 exams,
+                            appyling prestigues universities writing essays and long thinking</p>
+                    </div>
+                    <div class="timeline_item">
+                        <div class="timeline_icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="timeline_duration">
+                            02/2022-Present
+                        </p>
+                        <h5>On the way <span> - Books, Cs50, videos and more</span></h5>
+                        <p>As I try to learn more I start realizing that I do not have enough knowledge and experience, yet I am on the way</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="section sec3" id="portfolio"></section>
         <section class="section sec4" id="blogs"></section>
