--- a/hyper.html
+++ b/hyper.html
@@ -36,7 +36,7 @@
         </div>
     </header>
     <main>
-        <section class="section sec2 active" id="about">
+        <section class="section sec2" id="about">
             <div class="main_title">
                 <h2>About <span >me</span><span class="bg_text">my stats</span></h2>
             </div>
@@ -173,12 +173,96 @@
                             02/2022-Present
                         </p>
                         <h5>On the way <span> - Books, Cs50, videos and more</span></h5>
-                        <p>As I try to learn more I start realizing that I do not have enough knowledge and experience, yet I am on the way</p>
+                        <p>I know I should gain lots of knowledge and experience, so I am on the way</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section sec3" id="portfolio"></section>
+
+        <section class="section sec3 active" id="portfolio">
+            <div class="main_title">
+                <h2>my <span >portfolio</span><span class="bg_text">my work</span></h2>
+            </div>
+            <p class="port_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, aspernatur.</p>
+            <div class="portfolio_container">
+                <div class="portfolio_item">
+                    <div class="image_cont">
+                        <img src="./images/port1.jpg">
+                    </div>
+                    <div class="hover_port_item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/MuhammadJaff/Something_simple"  target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a onclick="Liked()" target="_blank" class="icon">
+                                <i class="fas fa-thumbs-up"></i>
+                            </a>
+                            <a onclick="DisLiked()" target="_blank" class="icon">
+                                <i class="fas fa-thumbs-down"></i>
+                            </a>
+                            <a href="mailto:muhammadjaff04@gmail.com" target="_blank" class="icon">
+                                <i class="fas fa-comment"></i>
+                            </a>
+                            <a href="https://t.me/R_Muhammad_Jafar" target="_blank" class="icon">
+                                <i class="fab fa-telegram"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio_item">
+                    <div class="image_cont">
+                        <img src="./images/port2.jpg">
+                    </div>
+                    <div class="hover_port_item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/MuhammadJaff/Something_simple"  target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a onclick="Liked()" target="_blank" class="icon">
+                                <i class="fas fa-thumbs-up"></i>
+                            </a>
+                            <a onclick="DisLiked()" target="_blank" class="icon">
+                                <i class="fas fa-thumbs-down"></i>
+                            </a>
+                            <a href="mailto:muhammadjaff04@gmail.com" target="_blank" class="icon">
+                                <i class="fas fa-comment"></i>
+                            </a>
+                            <a href="https://t.me/R_Muhammad_Jafar" target="_blank" class="icon">
+                                <i class="fab fa-telegram"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio_item">
+                    <div class="image_cont">
+                        <img src="./images/port3.jpg">
+                    </div>
+                    <div class="hover_port_item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/MuhammadJaff/Something_simple"  target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a onclick="Liked()" target="_blank" class="icon">
+                                <i class="fas fa-thumbs-up"></i>
+                            </a>
+                            <a onclick="DisLiked()" target="_blank" class="icon">
+                                <i class="fas fa-thumbs-down"></i>
+                            </a>
+                            <a href="mailto:muhammadjaff04@gmail.com" target="_blank" class="icon">
+                                <i class="fas fa-comment"></i>
+                            </a>
+                            <a href="https://t.me/R_Muhammad_Jafar" target="_blank" class="icon">
+                                <i class="fab fa-telegram"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section sec4" id="blogs"></section>
         <section class="section sec5" id="contact"></section>
     </main>
