--- a/hyper.html
+++ b/hyper.html
@@ -179,7 +179,7 @@
             </div>
         </section>
 
-        <section class="section sec3 active" id="portfolio">
+        <section class="section sec3" id="portfolio">
             <div class="main_title">
                 <h2>my <span >portfolio</span><span class="bg_text">my work</span></h2>
             </div>
@@ -263,7 +263,34 @@
             </div>
         </section>
 
-        <section class="section sec4" id="blogs"></section>
+        <section class="section sec4 active" id="blogs">
+            <div class="main_title">
+                <h2>my <span >blogs</span><span class="bg_text">perspective</span></h2>
+            </div>
+            <div class="blogs_container">
+                <div class="blog_item">
+                    <img src="./images/blog1.jpg" alt="">
+                    <div class="blog_text">
+                        <h3>Topic1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
+                    </div>
+                </div>
+                <div class="blog_item">
+                    <img src="./images/blog2.jpg" alt="">
+                    <div class="blog_text">
+                        <h3>Topic1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
+                    </div>
+                </div>
+                <div class="blog_item">
+                    <img src="./images/port7.jpg" alt="">
+                    <div class="blog_text">
+                        <h3>Topic1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec5" id="contact"></section>
     </main>
     <div class="controls">
