--- a/hyper.html
+++ b/hyper.html
@@ -263,7 +263,7 @@
             </div>
         </section>
 
-        <section class="section sec4 active" id="blogs">
+        <section class="section sec4" id="blogs">
             <div class="main_title">
                 <h2>my <span >blogs</span><span class="bg_text">perspective</span></h2>
             </div>
@@ -271,27 +271,121 @@
                 <div class="blog_item">
                     <img src="./images/blog1.jpg" alt="">
                     <div class="blog_text">
-                        <h3>Topic1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
-                    </div>
-                </div>
-                <div class="blog_item">
-                    <img src="./images/blog2.jpg" alt="">
-                    <div class="blog_text">
-                        <h3>Topic1</h3>
+                        <h3>Books</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
                     </div>
                 </div>
                 <div class="blog_item">
                     <img src="./images/port7.jpg" alt="">
                     <div class="blog_text">
-                        <h3>Topic1</h3>
+                        <h3>SAT and IELTS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
+                    </div>
+                </div>
+                <div class="blog_item">
+                    <img src="./images/blog2.jpg" alt="">
+                    <div class="blog_text">
+                        <h3>Reader</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section sec5" id="contact"></section>
+        <section class="section sec5 active" id="contact">
+            <div class="main_title">
+                <h2>my <span >contact</span><span class="bg_text">information</span></h2>
+            </div>
+            <div class="contact_container">
+                <div class="left_contact">
+                    <h4>Contact me here</h4>
+                    <p>Here is some information address</p>
+                    <div class="contact_items">
+                        <div class="contact_item">
+                            <div class="contact_icons">
+                                <div class="contact_icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    location
+                                </div>
+                                <p>
+                                    <span>:Ankara,Turkey(now)</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contact_item">
+                            <div class="contact_icons">
+                                <div class="contact_icon">
+                                    <i class="fas fa-envelope"></i>
+                                    <span>email</span>
+                                </div>
+                                <p>
+                                    <span>:muhammadjaff04@gmail.com</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contact_item">
+                            <div class="contact_icons">
+                                <div class="contact_icon">
+                                    <i class="fas fa-phone-alt"></i>
+                                    <span>Mobile number</span>
+                                </div>
+                                <p>
+                                    <span>:+998946535535</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contact_item">
+                            <div class="contact_icons">
+                                <div class="contact_icon">
+                                    <i class="fas fa-globe-europe"></i>
+                                    <span> languages </span>   
+                                </div>
+                                <p>
+                                    <span>:English,Uzbek,Russian,Turkish</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contact_bottom_icons">
+                        <div class="contact_bottom_icon">
+                            <a href="#" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-telegram"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>  
+                <div class="right_contact">
+                    <form action="">
+                        <div class="input_control double_input">
+                            <input type="text" required placeholder="Your name">
+                            <input type="text" required placeholder="Your email">
+                        </div>
+                        <div class="input_control">
+                            <input type="text" required placeholder="Subject">
+                        </div>
+                        <div class="input_control">
+                            <textarea name="" id="" placeholder="Write here..." cols="15" rows="8"></textarea>
+                        </div>
+                        <div class="submit_btn">
+                            <div class="btn_container">
+                                <a href="#" class="download_btn">
+                                    <span class="download_text">Submit</span>
+                                    <span class="download_icon"><i class="far fa-share-square"></i></span>
+                                </a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <div class="controls">
         <div class="control control_1 btn_active" data-id="home">
