--- a/hyper.html
+++ b/hyper.html
@@ -297,17 +297,17 @@
             </div>
             <div class="contact_container">
                 <div class="left_contact">
-                    <h4>Contact me here</h4>
-                    <p>Here is some information address</p>
+                    <h2>Contact me here</h2>
+                    <p>Here is some information & address</p>
                     <div class="contact_items">
                         <div class="contact_item">
                             <div class="contact_icons">
                                 <div class="contact_icon">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    location
+                                    Location:
                                 </div>
                                 <p>
-                                    <span>:Ankara,Turkey(now)</span>
+                                    <span>Ankara, Turkey(now)</span>
                                 </p>
                             </div>
                         </div>
@@ -315,10 +315,10 @@
                             <div class="contact_icons">
                                 <div class="contact_icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>email</span>
+                                    <span>Email:</span>
                                 </div>
                                 <p>
-                                    <span>:muhammadjaff04@gmail.com</span>
+                                    <span>muhammadjaff04@gmail.com</span>
                                 </p>
                             </div>
                         </div>
@@ -326,10 +326,10 @@
                             <div class="contact_icons">
                                 <div class="contact_icon">
                                     <i class="fas fa-phone-alt"></i>
-                                    <span>Mobile number</span>
+                                    <span>Mobile number:</span>
                                 </div>
                                 <p>
-                                    <span>:+998946535535</span>
+                                    <span>+998946535535</span>
                                 </p>
                             </div>
                         </div>
@@ -337,10 +337,10 @@
                             <div class="contact_icons">
                                 <div class="contact_icon">
                                     <i class="fas fa-globe-europe"></i>
-                                    <span> languages </span>   
+                                    <span> Languages: </span>   
                                 </div>
                                 <p>
-                                    <span>:English,Uzbek,Russian,Turkish</span>
+                                    <span>English, Uzbek, Russian, Turkish</span>
                                 </p>
                             </div>
                         </div>
@@ -403,6 +403,9 @@
         <div class="control control_5" data-id="contact">
             <i class="fas fa-envelope-open "></i>
         </div>
+    </div>
+    <div class="theme_btn" onclick="themeChange()">
+        <i class="fas fa-adjust"></i>
     </div>
 
     <script src="app.js"></script>
