--- a/hyper.html
+++ b/hyper.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="main_content">
-    <header class="section sec1 active" id="home">
+    <header class="section sec1 " id="home">
         <div class="header_content">
             <div class="left_header">
                 <div class="back_shape"></div>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="right_header">
-                <h1 class="name">Hello. I am <span> Muhammad Jafar</span>. An influencer</h1>
+                <h1 class="name">Hello, I am <span> Muhammad Jafar</span>. An influencer</h1>
                 <p>Who am I? This question always makes me ponder. I am a son, brother, friend, initially a student of life, sometimes passed, sometimes failed its exams. </p>
                 <div class="btn_container">
                     <a href="./images/CV.pdf" target="_blank" class="download_btn">
@@ -36,7 +36,7 @@
         </div>
     </header>
     <main>
-        <section class="section sec2" id="about">
+        <section class="section sec2 " id="about">
             <div class="main_title">
                 <h2>About <span >me</span><span class="bg_text">my stats</span></h2>
             </div>
@@ -179,7 +179,7 @@
             </div>
         </section>
 
-        <section class="section sec3" id="portfolio">
+        <section class="section sec3 " id="portfolio">
             <div class="main_title">
                 <h2>my <span >portfolio</span><span class="bg_text">my work</span></h2>
             </div>
@@ -291,7 +291,7 @@
                 </div>
             </div>
         </section>
-        <section class="section sec5" id="contact">
+        <section class="section sec5 active" id="contact">
             <div class="main_title">
                 <h2>my <span >contact</span><span class="bg_text">information</span></h2>
             </div>
