--- a/hyper.html
+++ b/hyper.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="main_content">
-    <header class="section sec1 " id="home">
+    <header class="section sec1 active" id="home">
         <div class="header_content">
             <div class="left_header">
                 <div class="back_shape"></div>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="right_header">
-                <h1 class="name">Hello, I am <span> Muhammad Jafar</span>. An influencer</h1>
+                <h1 class="name">Hello, I am <span> Muhammad Jafar</span>. An influencer.</h1>
                 <p>Who am I? This question always makes me ponder. I am a son, brother, friend, initially a student of life, sometimes passed, sometimes failed its exams. </p>
                 <div class="btn_container">
                     <a href="./images/CV.pdf" target="_blank" class="download_btn">
@@ -291,7 +291,7 @@
                 </div>
             </div>
         </section>
-        <section class="section sec5 active" id="contact">
+        <section class="section sec5" id="contact">
             <div class="main_title">
                 <h2>my <span >contact</span><span class="bg_text">information</span></h2>
             </div>
