--- a/hyper.html
+++ b/hyper.html
@@ -183,7 +183,7 @@
             <div class="main_title">
                 <h2>my <span >portfolio</span><span class="bg_text">my work</span></h2>
             </div>
-            <p class="port_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, aspernatur.</p>
+            <p class="port_text">There are some projects you can see on my github, your feeback is vital for me</p>
             <div class="portfolio_container">
                 <div class="portfolio_item">
                     <div class="image_cont">
@@ -272,21 +272,21 @@
                     <img src="./images/blog1.jpg" alt="">
                     <div class="blog_text">
                         <h3>Books</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
+                        <p>Living other period and time, with totally new people around you, walking through ways that may not even exist anywhere, is the thing you can feel by reading books. I prefer reading them in my native language so that I can feel better </p>
                     </div>
                 </div>
                 <div class="blog_item">
                     <img src="./images/port7.jpg" alt="">
                     <div class="blog_text">
                         <h3>SAT and IELTS</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
+                        <p>I am not expert to tell you something about these exams but as a person who have taken both exams, I can advice you something, JUST TAKE IT EASY, DO YOUR BEST AND READY FOR the LEAST RESULT</p>
                     </div>
                 </div>
                 <div class="blog_item">
                     <img src="./images/blog2.jpg" alt="">
                     <div class="blog_text">
                         <h3>Reader</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt.</p>
+                        <p>Let's talk about you. What is your favourite topic you prefer to choose for conversation, think about it write something that helps to expose you right direction</p>
                     </div>
                 </div>
             </div>
